--- a/ToDoList_Malherbe_Bouttier/app/src/main/res/values/strings.xml
+++ b/ToDoList_Malherbe_Bouttier/app/src/main/res/values/strings.xml
@@ -91,4 +91,9 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="action_settings">Settings</string>
+    <string name="menu">Menu</string>
+    <string name="evenement">Evenement</string>
+    <string name="evenement">Evenement</string>
+    <string name="todo">TODO</string>
+    <string name="todo">TODO</string>
 </resources>
