--- a/ToDoList_Malherbe_Bouttier/app/src/main/res/values/strings.xml
+++ b/ToDoList_Malherbe_Bouttier/app/src/main/res/values/strings.xml
@@ -93,7 +93,18 @@
     <string name="action_settings">Settings</string>
     <string name="menu">Menu</string>
     <string name="evenement">Evenement</string>
-    <string name="evenement">Evenement</string>
     <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
+    <string name="title_activity_calendar">CalendarActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="supprimer">Supprimer</string>
+    <string name="cadeau_offrir">Cadeau à offrir</string>
+    <string name="ajouter">Ajouter</string>
+    <string name="button">Button</string>
 </resources>
