--- a/Todolist_Bouttier_Malherbe/app/src/main/res/values/strings.xml
+++ b/Todolist_Bouttier_Malherbe/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Todolist_Bouttier_Malherbe</string>
+    <string name="ajouter">Ajouter</string>
+    <string name="add_button">Add Button</string>
+    <string name="firstname">Firstname</string>
+    <string name="information">Information</string>
+    <string name="cancel">Cancel</string>
+    <string name="ok">OK</string>
 </resources>
