--- a/Todolist_Bouttier_Malherbe/app/src/main/res/values/strings.xml
+++ b/Todolist_Bouttier_Malherbe/app/src/main/res/values/strings.xml
@@ -6,4 +6,12 @@
     <string name="information">Information</string>
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
+
+    <!-- ADDED FOR THE PROJECT -->
+    <string name="about_text">
+        "Notre application est le produit d'un travail scolaire.\n "
+        "Elle à été concue par 2 étudiants en 3ième année de developpement informatique de l'école Ynov Toulouse".\n"
+        Simple d'utilisation, elle permet lors des fêtes de famille d'avoir une liste pour aider dans le choix des cadeaux. \n\n"
+        "Sur le même modèle qu'une liste de mariage, cette application s'adapte aux événements de la famille.\n"
+    </string>
 </resources>
