--- a/Todolist_Bouttier_Malherbe/app/src/main/res/values/strings.xml
+++ b/Todolist_Bouttier_Malherbe/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="add_button">Add Button</string>
     <string name="firstname">Firstname</string>
     <string name="information">Information</string>
-    <string name="cancel">Cancel</string>
+    <string name="cancel">Annuler</string>
     <string name="ok">OK</string>
 
     <!-- ADDED FOR THE PROJECT -->
